feat: add generic acquisition providers
